# 6502emu

./: .Makefile.swp  .gitignore  :w  CMakeLists.txt  Makefile  README.md  \
include/6502emu/: args.h  cpu.h  dbg_parse.h
src/: .cpu.h.swp  .interface.h.swp  .main.c.swp  args.c  cpu.c  cpu.h  dbg_parse.c  dbginfo.c  main.c  tui_main.c
test_assembly/: Makefile  a.out  test  test.cfg  test.dbg  test.lst  test.map  test.s
tests/: .test_main.c.swo  .tests.c.swo  .tests.h.swo  Makefile  test  test_main.c  tests.c  tests.h
tests/src/: and_tests.c  test_main.c  tests.h
tests/src/instructions/: adc.c  and.c  asl.c  asl_tests.c  bit.c  branch.c  brk.c  cmp.c  cpx.c  cpy.c  dec.c  eor.c  flag.c  inc.c  jmp.c  jsr.c  lda.c  ldx.c  ldy.c  lsr.c  nop.c  ora.c  pha.c  pla.c  random_tests.c  rol.c  ror.c  rti_rts.c  sbc.c  sta.c  stack.c  stx.c  sty.c  t__.c  tests.h
